--- a/hh_dataset.ipynb
+++ b/hh_dataset.ipynb
@@ -26,15 +26,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "diVUs9S6VFvG",
-        "outputId": "689ce641-70c5-4b34-9edd-7faafad74a37"
+        "outputId": "bfe1a099-d2c9-4a64-9c37-10f477f65b67"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.6), please consider upgrading to the latest version (0.3.7).\n"
+            "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.6), please consider upgrading to the latest version (0.3.7).\n",
+            "Downloading from https://www.kaggle.com/api/v1/datasets/download/sameelie/resume-hh?dataset_version_number=1...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 67.3M/67.3M [00:01<00:00, 58.3MB/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting files...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
           ]
         }
       ]
