Добавил df.info()

--- a/hh_dataset.ipynb
+++ b/hh_dataset.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -21,42 +21,6 @@
         "outputId": "404dce40-edf3-4361-db5b-917ab75f8cf2"
       },
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "e:\\IDEA\\Python3_11\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading from https://www.kaggle.com/api/v1/datasets/download/sameelie/resume-hh?dataset_version_number=1...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 67.3M/67.3M [00:08<00:00, 8.29MB/s]"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Extracting files...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ]
-        },
         {
           "data": {
             "text/html": [
@@ -244,7 +208,7 @@
               "4                      Не указано  "
             ]
           },
-          "execution_count": 1,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -259,6 +223,41 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 44744 entries, 0 to 44743\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column                           Non-Null Count  Dtype \n",
+            "---  ------                           --------------  ----- \n",
+            " 0   Пол, возраст                     44744 non-null  object\n",
+            " 1   ЗП                               44744 non-null  object\n",
+            " 2   Ищет работу на должность:        44744 non-null  object\n",
+            " 3   Город, переезд, командировки     44744 non-null  object\n",
+            " 4   Занятость                        44744 non-null  object\n",
+            " 5   График                           44744 non-null  object\n",
+            " 6   Опыт работы                      44576 non-null  object\n",
+            " 7   Последнее/нынешнее место работы  44743 non-null  object\n",
+            " 8   Последняя/нынешняя должность     44742 non-null  object\n",
+            " 9   Образование и ВУЗ                44744 non-null  object\n",
+            " 10  Обновление резюме                44744 non-null  object\n",
+            " 11  Авто                             44744 non-null  object\n",
+            "dtypes: object(12)\n",
+            "memory usage: 4.1+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df.info()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -267,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "9oq6YNbPXE6W"
       },
