Превращаем колонку 'ЗП' в числовую

--- a/hh_dataset.ipynb
+++ b/hh_dataset.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -208,7 +208,7 @@
               "4                      Не указано  "
             ]
           },
-          "execution_count": 19,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -277,7 +277,48 @@
         "# Делим колонку 'Пол, возраст' на две\n",
         "sex_age_col = df['Пол, возраст'].values\n",
         "df['Пол'] = [val.split(',')[0].strip() for val in sex_age_col]\n",
-        "df['Возраст'] = [int(re.findall('\\d+', val.split(',')[1])[0]) for val in sex_age_col]"
+        "df['Возраст'] = [int(re.findall('\\d+', val.split(',')[1])[0]) for val in sex_age_col]\n",
+        "\n",
+        "# Превращаем колонку 'ЗП' в числовую\n",
+        "salary_col = df['ЗП'].values\n",
+        "df['ЗП'] = [int(re.findall('\\d+', val)[0]) for val in salary_col]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 44744 entries, 0 to 44743\n",
+            "Data columns (total 14 columns):\n",
+            " #   Column                           Non-Null Count  Dtype \n",
+            "---  ------                           --------------  ----- \n",
+            " 0   Пол, возраст                     44744 non-null  object\n",
+            " 1   ЗП                               44744 non-null  int64 \n",
+            " 2   Ищет работу на должность:        44744 non-null  object\n",
+            " 3   Город, переезд, командировки     44744 non-null  object\n",
+            " 4   Занятость                        44744 non-null  object\n",
+            " 5   График                           44744 non-null  object\n",
+            " 6   Опыт работы                      44576 non-null  object\n",
+            " 7   Последнее/нынешнее место работы  44743 non-null  object\n",
+            " 8   Последняя/нынешняя должность     44742 non-null  object\n",
+            " 9   Образование и ВУЗ                44744 non-null  object\n",
+            " 10  Обновление резюме                44744 non-null  object\n",
+            " 11  Авто                             44744 non-null  object\n",
+            " 12  Пол                              44744 non-null  object\n",
+            " 13  Возраст                          44744 non-null  int64 \n",
+            "dtypes: int64(2), object(12)\n",
+            "memory usage: 4.8+ MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df.info()"
       ]
     }
   ],
