Превращаем колонку 'Авто' в числовую

--- a/hh_dataset.ipynb
+++ b/hh_dataset.ipynb
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 64,
       "metadata": {
         "id": "9oq6YNbPXE6W"
       },
@@ -285,12 +285,19 @@
         "# Превращаем колонку 'ЗП' в числовую\n",
         "if not is_numeric_dtype(df['ЗП']):\n",
         "    salary_col = df['ЗП'].values\n",
-        "    df['ЗП'] = [int(re.findall('\\d+', val)[0]) for val in salary_col]"
+        "    df['ЗП'] = [int(re.findall('\\d+', val)[0]) for val in salary_col]\n",
+        "\n",
+        "# Превращаем колонку 'Авто' в числовую\n",
+        "# Имеется собственный автомобиль -> 1\n",
+        "# Не указано -> 0\n",
+        "if not is_numeric_dtype(df['Авто']):\n",
+        "    is_car_exists_col = df['Авто'].values\n",
+        "    df['Авто'] = [int(val.strip().startswith('Имеется')) for val in is_car_exists_col]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [
         {
@@ -312,10 +319,10 @@
             " 7   Последняя/нынешняя должность     44742 non-null  object\n",
             " 8   Образование и ВУЗ                44744 non-null  object\n",
             " 9   Обновление резюме                44744 non-null  object\n",
-            " 10  Авто                             44744 non-null  object\n",
+            " 10  Авто                             44744 non-null  int64 \n",
             " 11  Пол                              44744 non-null  object\n",
             " 12  Возраст                          44744 non-null  int64 \n",
-            "dtypes: int64(2), object(11)\n",
+            "dtypes: int64(3), object(10)\n",
             "memory usage: 4.4+ MB\n"
           ]
         }
