--- a/hh_dataset.ipynb
+++ b/hh_dataset.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 250,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -208,7 +208,7 @@
               "4                      Не указано  "
             ]
           },
-          "execution_count": 51,
+          "execution_count": 250,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 251,
       "metadata": {
         "id": "9oq6YNbPXE6W"
       },
@@ -276,7 +276,7 @@
         "from pandas.api.types import is_numeric_dtype\n",
         "\n",
         "# Делим колонку 'Пол, возраст' на две\n",
-        "if not df.columns.__contains__('Пол') and not df.columns.__contains__('Возраст'):\n",
+        "if df.columns.__contains__('Пол, возраст'):\n",
         "    sex_age_col = df['Пол, возраст'].values\n",
         "    df['Пол'] = [val.split(',')[0].strip() for val in sex_age_col]\n",
         "    df['Возраст'] = [int(re.findall('\\d+', val.split(',')[1])[0]) for val in sex_age_col]\n",
@@ -292,12 +292,28 @@
         "# Не указано -> 0\n",
         "if not is_numeric_dtype(df['Авто']):\n",
         "    is_car_exists_col = df['Авто'].values\n",
-        "    df['Авто'] = [int(val.strip().startswith('Имеется')) for val in is_car_exists_col]"
+        "    df['Авто'] = [int(val.strip().startswith('Имеется')) for val in is_car_exists_col]\n",
+        "\n",
+        "# Разбиваем колонку 'Город, переезд, командировки' на три\n",
+        "if df.columns.__contains__('Город, переезд, командировки'):\n",
+        "    city_moving_trips_col = df['Город, переезд, командировки'].values\n",
+        "    city_col = []\n",
+        "    moving_col = []\n",
+        "    trip_col = []\n",
+        "\n",
+        "    for row in city_moving_trips_col:\n",
+        "        city_col.append(row.split(',')[0].strip())\n",
+        "        moving_col.append(int(re.search(r'не готов(?:а)? к переезду', row) is None))\n",
+        "        trip_col.append(int(re.search(r'не готов(?:а)? к командировкам', row) is None))\n",
+        "    df['Город'] = city_col\n",
+        "    df['Переезд'] = moving_col\n",
+        "    df['Командировки'] = trip_col\n",
+        "    df = df.drop(columns=['Город, переезд, командировки'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 252,
       "metadata": {},
       "outputs": [
         {
@@ -306,24 +322,26 @@
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 44744 entries, 0 to 44743\n",
-            "Data columns (total 13 columns):\n",
+            "Data columns (total 15 columns):\n",
             " #   Column                           Non-Null Count  Dtype \n",
             "---  ------                           --------------  ----- \n",
             " 0   ЗП                               44744 non-null  int64 \n",
             " 1   Ищет работу на должность:        44744 non-null  object\n",
-            " 2   Город, переезд, командировки     44744 non-null  object\n",
-            " 3   Занятость                        44744 non-null  object\n",
-            " 4   График                           44744 non-null  object\n",
-            " 5   Опыт работы                      44576 non-null  object\n",
-            " 6   Последнее/нынешнее место работы  44743 non-null  object\n",
-            " 7   Последняя/нынешняя должность     44742 non-null  object\n",
-            " 8   Образование и ВУЗ                44744 non-null  object\n",
-            " 9   Обновление резюме                44744 non-null  object\n",
-            " 10  Авто                             44744 non-null  int64 \n",
-            " 11  Пол                              44744 non-null  object\n",
-            " 12  Возраст                          44744 non-null  int64 \n",
-            "dtypes: int64(3), object(10)\n",
-            "memory usage: 4.4+ MB\n"
+            " 2   Занятость                        44744 non-null  object\n",
+            " 3   График                           44744 non-null  object\n",
+            " 4   Опыт работы                      44576 non-null  object\n",
+            " 5   Последнее/нынешнее место работы  44743 non-null  object\n",
+            " 6   Последняя/нынешняя должность     44742 non-null  object\n",
+            " 7   Образование и ВУЗ                44744 non-null  object\n",
+            " 8   Обновление резюме                44744 non-null  object\n",
+            " 9   Авто                             44744 non-null  int64 \n",
+            " 10  Пол                              44744 non-null  object\n",
+            " 11  Возраст                          44744 non-null  int64 \n",
+            " 12  Город                            44744 non-null  object\n",
+            " 13  Переезд                          44744 non-null  int64 \n",
+            " 14  Командировки                     44744 non-null  int64 \n",
+            "dtypes: int64(5), object(10)\n",
+            "memory usage: 5.1+ MB\n"
           ]
         }
       ],
