Добавил корреляцию после предобработки

--- a/hh_dataset.ipynb
+++ b/hh_dataset.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 250,
+      "execution_count": 257,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -208,7 +208,7 @@
               "4                      Не указано  "
             ]
           },
-          "execution_count": 250,
+          "execution_count": 257,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -224,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 261,
       "metadata": {},
       "outputs": [
         {
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 251,
+      "execution_count": 262,
       "metadata": {
         "id": "9oq6YNbPXE6W"
       },
@@ -313,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 252,
+      "execution_count": 263,
       "metadata": {},
       "outputs": [
         {
@@ -343,10 +343,97 @@
             "dtypes: int64(5), object(10)\n",
             "memory usage: 5.1+ MB\n"
           ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ЗП</th>\n",
+              "      <th>Авто</th>\n",
+              "      <th>Возраст</th>\n",
+              "      <th>Переезд</th>\n",
+              "      <th>Командировки</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>ЗП</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.016760</td>\n",
+              "      <td>0.095651</td>\n",
+              "      <td>0.066638</td>\n",
+              "      <td>0.108153</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Авто</th>\n",
+              "      <td>0.016760</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.086801</td>\n",
+              "      <td>0.029807</td>\n",
+              "      <td>0.074009</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Возраст</th>\n",
+              "      <td>0.095651</td>\n",
+              "      <td>0.086801</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>-0.030002</td>\n",
+              "      <td>0.085056</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Переезд</th>\n",
+              "      <td>0.066638</td>\n",
+              "      <td>0.029807</td>\n",
+              "      <td>-0.030002</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.305249</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Командировки</th>\n",
+              "      <td>0.108153</td>\n",
+              "      <td>0.074009</td>\n",
+              "      <td>0.085056</td>\n",
+              "      <td>0.305249</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                    ЗП      Авто   Возраст   Переезд  Командировки\n",
+              "ЗП            1.000000  0.016760  0.095651  0.066638      0.108153\n",
+              "Авто          0.016760  1.000000  0.086801  0.029807      0.074009\n",
+              "Возраст       0.095651  0.086801  1.000000 -0.030002      0.085056\n",
+              "Переезд       0.066638  0.029807 -0.030002  1.000000      0.305249\n",
+              "Командировки  0.108153  0.074009  0.085056  0.305249      1.000000"
+            ]
+          },
+          "execution_count": 263,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "df.info()"
+        "df.info()\n",
+        "df.corr(numeric_only=True)"
       ]
     }
   ],
