--- a/hh_dataset.ipynb
+++ b/hh_dataset.ipynb
@@ -314,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 264,
+      "execution_count": 265,
       "metadata": {},
       "outputs": [
         {
@@ -347,11 +347,110 @@
         },
         {
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ЗП</th>\n",
+              "      <th>Авто</th>\n",
+              "      <th>Возраст</th>\n",
+              "      <th>Переезд</th>\n",
+              "      <th>Командировки</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>ЗП</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.016760</td>\n",
+              "      <td>0.095651</td>\n",
+              "      <td>0.066638</td>\n",
+              "      <td>0.108153</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Авто</th>\n",
+              "      <td>0.016760</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.086801</td>\n",
+              "      <td>0.029807</td>\n",
+              "      <td>0.074009</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Возраст</th>\n",
+              "      <td>0.095651</td>\n",
+              "      <td>0.086801</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>-0.030002</td>\n",
+              "      <td>0.085056</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Переезд</th>\n",
+              "      <td>0.066638</td>\n",
+              "      <td>0.029807</td>\n",
+              "      <td>-0.030002</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.305249</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Командировки</th>\n",
+              "      <td>0.108153</td>\n",
+              "      <td>0.074009</td>\n",
+              "      <td>0.085056</td>\n",
+              "      <td>0.305249</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                    ЗП      Авто   Возраст   Переезд  Командировки\n",
+              "ЗП            1.000000  0.016760  0.095651  0.066638      0.108153\n",
+              "Авто          0.016760  1.000000  0.086801  0.029807      0.074009\n",
+              "Возраст       0.095651  0.086801  1.000000 -0.030002      0.085056\n",
+              "Переезд       0.066638  0.029807 -0.030002  1.000000      0.305249\n",
+              "Командировки  0.108153  0.074009  0.085056  0.305249      1.000000"
+            ]
+          },
+          "execution_count": 265,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import seaborn as sns\n",
+        "\n",
+        "df.info()\n",
+        "df.corr(numeric_only=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 266,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
             "text/plain": [
               "<Axes: >"
             ]
           },
-          "execution_count": 264,
+          "execution_count": 266,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -367,10 +466,6 @@
         }
       ],
       "source": [
-        "import seaborn as sns\n",
-        "\n",
-        "df.info()\n",
-        "df.corr(numeric_only=True)\n",
         "sns.heatmap(df.corr(numeric_only=True))"
       ]
     }
