--- a/hh_dataset.ipynb
+++ b/hh_dataset.ipynb
@@ -717,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -729,7 +729,7 @@
         "for idx, row in df.iterrows():\n",
         "    if row['Возраст'] < min_work_age:\n",
         "        drop_idx.append(idx)\n",
-        "    elif row['Возраст'] == 14 and row['Опыт работы'] > 11:\n",
+        "    elif row['Возраст'] == min_work_age and row['Опыт работы'] > 11:\n",
         "        drop_idx.append(idx)\n",
         "    elif (row['Возраст'] - min_work_age) * 12 < row['Опыт работы']:\n",
         "        drop_idx.append(idx)\n",
