--- a/hh_dataset.ipynb
+++ b/hh_dataset.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -216,6 +216,7 @@
       "source": [
         "import kagglehub\n",
         "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
         "dataset_path = kagglehub.dataset_download(\"sameelie/resume-hh\")\n",
@@ -256,6 +257,161 @@
       ],
       "source": [
         "df.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.isnull()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "100* df.isnull().sum() / len(df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def percent_missing(df):\n",
+        "    percent_nan = 100* df.isnull().sum() / len(df)\n",
+        "    percent_nan = percent_nan[percent_nan>0].sort_values()\n",
+        "    return percent_nan\n",
+        "\n",
+        "percent_nan = percent_missing(df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "percent_nan"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sns.barplot(x=percent_nan.index,y=percent_nan)\n",
+        "plt.xticks(rotation=90)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sns.barplot(x=percent_nan.index,y=percent_nan)\n",
+        "plt.xticks(rotation=90)\n",
+        "\n",
+        "plt.ylim(0,1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "percent_nan[percent_nan < 1]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "100/len(df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df[df['Опыт работы'].isnull()]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df[df['Последняя/нынешняя должность'].isnull()]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df[df['Последнее/нынешнее место работы'].isnull()]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Заменяем значения столбца Опыт работы на 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "bsmt_num_cols = ['Опыт работы']\n",
+        "df[bsmt_num_cols] = df[bsmt_num_cols].fillna(0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Заменяем значения столбца Последняя/нынешняя должность, Последнее/нынешнее место работы на не указано"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "bsmt_str_cols =  ['Последняя/нынешняя должность', 'Последнее/нынешнее место работы']\n",
+        "df[bsmt_str_cols] = df[bsmt_str_cols].fillna('Не указано')"
       ]
     },
     {
