addded svm knn poly

--- a/hh_dataset.ipynb
+++ b/hh_dataset.ipynb
@@ -4148,6 +4148,272 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Сравнение различных степеней полинома**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "import numpy as np\n",
+    "\n",
+    "# Создаем список степеней полиномов для тестирования\n",
+    "degrees = [1, 2, 3]\n",
+    "\n",
+    "# Подготовка данных (используем уже масштабированные данные)\n",
+    "X_train_poly = X_train\n",
+    "X_test_poly = X_test\n",
+    "\n",
+    "# Словарь для хранения результатов\n",
+    "results = {'degree': [], 'train_score': [], 'test_score': []}\n",
+    "\n",
+    "# Перебираем степени полинома\n",
+    "for degree in degrees:\n",
+    "    # Создаем pipeline с PolynomialFeatures и моделью\n",
+    "    pipeline = Pipeline([\n",
+    "        ('poly', PolynomialFeatures(degree=degree)),\n",
+    "        ('model', LinearRegression())\n",
+    "    ])\n",
+    "    \n",
+    "    # Обучаем модель\n",
+    "    pipeline.fit(X_train_poly, y_train)\n",
+    "    \n",
+    "    # Оценка на тренировочных данных\n",
+    "    train_score = pipeline.score(X_train_poly, y_train)\n",
+    "    \n",
+    "    # Оценка на тестовых данных\n",
+    "    test_score = pipeline.score(X_test_poly, y_test)\n",
+    "    \n",
+    "    # Сохраняем результаты\n",
+    "    results['degree'].append(degree)\n",
+    "    results['train_score'].append(train_score)\n",
+    "    results['test_score'].append(test_score)\n",
+    "    \n",
+    "    print(f\"Degree {degree}: Train R2 = {train_score:.4f}, Test R2 = {test_score:.4f}\")\n",
+    "\n",
+    "# # Визуализация результатов\n",
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "# plt.figure(figsize=(10, 6))\n",
+    "# plt.plot(results['degree'], results['train_score'], 'o-', label='Train R2')\n",
+    "# plt.plot(results['degree'], results['test_score'], 'o-', label='Test R2')\n",
+    "# plt.xlabel('Polynomial Degree')\n",
+    "# plt.ylabel('R2 Score')\n",
+    "# plt.title('Model Performance vs Polynomial Degree')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "# plt.show()\n",
+    "\n",
+    "# Выбираем лучшую степень на основе тестового R2\n",
+    "best_degree = results['degree'][np.argmax(results['test_score'])]\n",
+    "print(f\"\\nBest polynomial degree based on test R2: {best_degree}\")\n",
+    "\n",
+    "# Создаем финальный pipeline с лучшей степенью\n",
+    "final_poly_pipeline = Pipeline([\n",
+    "    ('poly', PolynomialFeatures(degree=best_degree)),\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('model', ElasticNet(**grid_model.best_params_))\n",
+    "])\n",
+    "\n",
+    "# Обучаем финальную модель\n",
+    "final_poly_pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Оценка финальной модели\n",
+    "final_train_score = final_poly_pipeline.score(X_train, y_train)\n",
+    "final_test_score = final_poly_pipeline.score(X_test, y_test)\n",
+    "\n",
+    "print(f\"\\nFinal Model with Polynomial Features (degree={best_degree}):\")\n",
+    "print(f\"Train R2: {final_train_score:.4f}\")\n",
+    "print(f\"Test R2: {final_test_score:.4f}\")\n",
+    "\n",
+    "# Предсказания на тестовом наборе\n",
+    "y_pred_poly = final_poly_pipeline.predict(X_test)\n",
+    "\n",
+    "# MAE и RMSE для финальной модели\n",
+    "mae_poly = mean_absolute_error(y_test, y_pred_poly)\n",
+    "rmse_poly = np.sqrt(mean_squared_error(y_test, y_pred_poly))\n",
+    "\n",
+    "print(f\"\\nMean Absolute Error (MAE) with polynomial features: {mae_poly}\")\n",
+    "print(f\"Root Mean Squared Error (RMSE) with polynomial features: {rmse_poly}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Регрессия KNN**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "\n",
+    "# Создаем KNN регрессор\n",
+    "knn = KNeighborsRegressor()\n",
+    "\n",
+    "# Параметры для GridSearchCV\n",
+    "param_grid = {\n",
+    "    'n_neighbors': range(3, 21, 2),  # Проверяем нечетные значения от 3 до 19\n",
+    "    'weights': ['uniform', 'distance'],  # Типы весов\n",
+    "    'p': [1, 2]  # 1 - манхэттенское расстояние, 2 - евклидово\n",
+    "}\n",
+    "\n",
+    "# Создаем GridSearchCV объект\n",
+    "grid_knn = GridSearchCV(estimator=knn, \n",
+    "                       param_grid=param_grid, \n",
+    "                       cv=5, \n",
+    "                       scoring='neg_mean_squared_error',\n",
+    "                       verbose=1,\n",
+    "                       n_jobs=-1)\n",
+    "\n",
+    "# Обучаем модель\n",
+    "print(\"Начинаем подбор параметров для KNN...\")\n",
+    "grid_knn.fit(X_train, y_train)\n",
+    "\n",
+    "# Лучшие параметры\n",
+    "print(\"\\nЛучшие параметры для KNN:\")\n",
+    "print(grid_knn.best_params_)\n",
+    "\n",
+    "# Предсказания на тестовом наборе\n",
+    "y_pred_knn = grid_knn.predict(X_test)\n",
+    "\n",
+    "# Оценка модели\n",
+    "print(\"\\nОценка KNN регрессии:\")\n",
+    "print(f\"Train R2: {grid_knn.score(X_train, y_train):.4f}\")\n",
+    "print(f\"Test R2: {grid_knn.score(X_test, y_test):.4f}\")\n",
+    "\n",
+    "# MAE и RMSE\n",
+    "mae_knn = mean_absolute_error(y_test, y_pred_knn)\n",
+    "rmse_knn = np.sqrt(mean_squared_error(y_test, y_pred_knn))\n",
+    "\n",
+    "print(f\"\\nMean Absolute Error (MAE): {mae_knn}\")\n",
+    "print(f\"Root Mean Squared Error (RMSE): {rmse_knn}\")\n",
+    "\n",
+    "# # Визуализация реальных и предсказанных значений\n",
+    "# plt.figure(figsize=(10, 6))\n",
+    "# plt.scatter(y_test, y_pred_knn, alpha=0.5)\n",
+    "# plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'k--', lw=2)\n",
+    "# plt.xlabel('Реальная ЗП')\n",
+    "# plt.ylabel('Предсказанная ЗП')\n",
+    "# plt.title('KNN Регрессия: Реальные vs Предсказанные значения')\n",
+    "# plt.show()\n",
+    "\n",
+    "# # Визуализация зависимости качества от числа соседей\n",
+    "# results = pd.DataFrame(grid_knn.cv_results_)\n",
+    "# mask = (results['param_weights'] == grid_knn.best_params_['weights']) & \\\n",
+    "#        (results['param_p'] == grid_knn.best_params_['p'])\n",
+    "\n",
+    "# plt.figure(figsize=(10, 6))\n",
+    "# plt.plot(results['param_n_neighbors'][mask], -results['mean_test_score'][mask], 'o-')\n",
+    "# plt.xlabel('Количество соседей')\n",
+    "# plt.ylabel('MSE')\n",
+    "# plt.title('Зависимость MSE от количества соседей')\n",
+    "# plt.grid(True)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Метод опорных векторов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import loguniform\n",
+    "\n",
+    "# Инициализация SVR модели\n",
+    "svr = SVR()\n",
+    "\n",
+    "param_dist = {\n",
+    "    'kernel': ['linear', 'rbf'], \n",
+    "    'C': loguniform(1e-1, 1e2),   # Логарифмическое распределение\n",
+    "    'epsilon': [0.01, 0.1, 0.5],\n",
+    "    'gamma': ['scale']\n",
+    "}\n",
+    "\n",
+    "# Создаем RandomizedSearchCV объект (быстрее чем GridSearchCV)\n",
+    "random_svr = RandomizedSearchCV(estimator=svr, \n",
+    "                              param_distributions=param_dist,\n",
+    "                              n_iter=20,          # Количество итераций\n",
+    "                              cv=3,\n",
+    "                              scoring='neg_mean_squared_error',\n",
+    "                              verbose=2,\n",
+    "                              n_jobs=-1,\n",
+    "                              random_state=42)\n",
+    "\n",
+    "# Обучаем модель на уменьшенной выборке (20% данных)\n",
+    "sample_size = int(0.2 * len(X_train))\n",
+    "random_indices = np.random.choice(len(X_train), sample_size, replace=False)\n",
+    "X_train_sample = X_train[random_indices]\n",
+    "y_train_sample = y_train.iloc[random_indices]\n",
+    "\n",
+    "print(f\"Используем уменьшенную выборку из {sample_size} примеров для обучения SVR...\")\n",
+    "random_svr.fit(X_train_sample, y_train_sample)\n",
+    "\n",
+    "# Лучшие параметры\n",
+    "print(\"\\nЛучшие параметры для SVR:\")\n",
+    "print(random_svr.best_params_)\n",
+    "\n",
+    "# Предсказания на тестовом наборе\n",
+    "y_pred_svr = random_svr.predict(X_test)\n",
+    "\n",
+    "# Оценка модели\n",
+    "print(\"\\nОценка SVR модели:\")\n",
+    "print(f\"Train R2: {random_svr.score(X_train_sample, y_train_sample):.4f}\")\n",
+    "print(f\"Test R2: {random_svr.score(X_test, y_test):.4f}\")\n",
+    "\n",
+    "# MAE и RMSE\n",
+    "mae_svr = mean_absolute_error(y_test, y_pred_svr)\n",
+    "rmse_svr = np.sqrt(mean_squared_error(y_test, y_pred_svr))\n",
+    "\n",
+    "print(f\"\\nMean Absolute Error (MAE): {mae_svr}\")\n",
+    "print(f\"Root Mean Squared Error (RMSE): {rmse_svr}\")\n",
+    "\n",
+    "# Важность признаков (только для линейного ядра)\n",
+    "if random_svr.best_params_['kernel'] == 'linear':\n",
+    "    coef = random_svr.best_estimator_.coef_\n",
+    "    feature_importance = pd.DataFrame({\n",
+    "        'Feature': X.columns,\n",
+    "        'Importance': np.abs(coef.ravel())\n",
+    "    })\n",
+    "    feature_importance = feature_importance.sort_values('Importance', ascending=False)\n",
+    "    \n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    sns.barplot(x='Importance', y='Feature', data=feature_importance.head(15))\n",
+    "    plt.title('Важность признаков (SVR с линейным ядром)')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"\\nДля визуализации важности признаков используйте линейное ядро\")"
+   ]
   }
  ],
  "metadata": {
